--- a/app/views/layouts/_top_nav.haml
+++ b/app/views/layouts/_top_nav.haml
@@ -1,41 +1,80 @@
 .top-navigation__container.container
-  %nav.top-navigation__nav.nav-collapse
+  %nav.top-navigation__nav
     .top-navigation__brand{class: ("active" if active_top_nav_section == 'home_pages')}
       - home_link_url = current_user&.admin? ? root_path : '#'
-      = link_to home_link_url, class: "top-navigation__brand-link" do
+      = link_to home_link_url, class: ' top-navigation__brand-link' do
         %span Wrapt
         =embedded_svg('wrapt-logo-tm', class: "navbar-brand__icon-wrapt-logo")
+    = top_nav_toggle(:in)
+    .top-navigation__menu.navbar-right.tnm__closed
+      = top_nav_toggle(:out)
+      - top_nav_links.each do |link|
+        - path, text, link_method = link
+        = send("top_nav_link_#{link_method.to_s}", path, text)
 
-    .top-navigation__menu
-      - if current_user && current_user.active?
-        - if current_user&.admin?
+- content_for :page_js do
+  :javascript
+    $(document).ready(function() {
+      var triggerIn = $('[data-toggle="fade in"]');
+      var triggerOut = $('[data-toggle="fade out"]');
+      var loadTarget = function(that) {
+        var targetSelector = $(that).data('target');
+        return $(targetSelector);
+      }
+      triggerIn.click(function() {
+        var target = loadTarget(this);
+        target.removeClass('tnm-fade__out');
+        target.removeClass('tnm__closed');
+        target.addClass('tnm-fade__in');
+      })
+      triggerOut.click(function() {
+        var target = loadTarget(this);
+        target.addClass('tnm-fade__out');
+        target.removeClass('tnm-fade__in');
+        setTimeout(function() {
+          target.addClass('tnm__closed')
+        }, 500)
+      })
+    })
+-#           
+  .top-navigation__container.container
+    %nav.top-navigation__nav
+      .top-navigation__brand{class: ("active" if active_top_nav_section == 'home_pages')}
+        - home_link_url = current_user&.admin? ? root_path : '#'
+        = link_to home_link_url, class: "top-navigation__brand-link" do
+          %span Wrapt
+          =embedded_svg('wrapt-logo-tm', class: "navbar-brand__icon-wrapt-logo")
+
+      .top-navigation__menu
+        - if current_user && current_user.active?
+          - if current_user&.admin?
+            %span.top-navigation__menu-item
+              = link_to admin_root_path do
+                =embedded_svg('icon-circle', class: "icon navbar-static-top__icon-circle")
+                Admin
           %span.top-navigation__menu-item
-            = link_to admin_root_path do
+            = link_to my_account_path do
               =embedded_svg('icon-circle', class: "icon navbar-static-top__icon-circle")
-              Admin
+              My Account
         %span.top-navigation__menu-item
-          = link_to my_account_path do
+          = link_to science_of_gifting_path do
             =embedded_svg('icon-circle', class: "icon navbar-static-top__icon-circle")
-            My Account
-      %span.top-navigation__menu-item
-        = link_to science_of_gifting_path do
-          =embedded_svg('icon-circle', class: "icon navbar-static-top__icon-circle")
-          The Science
-      - if enable_gift_basket?
-        %span.top-navigation__menu-item
-          = link_to '#', data: {behavior: 'open-gift-basket'}, onClick: "ga('send', 'event', 'basket', 'open-close', 'open');" do
-            =embedded_svg('icon-circle', class: "icon navbar-static-top__icon-circle")
-            Gift Basket
-            %span.gift-basket-count{"data-behavior" => "gift-basket-count", class: ('empty' if gift_basket_empty?)}
-              = gift_basket_count
+            The Science
+        - if enable_gift_basket?
+          %span.top-navigation__menu-item
+            = link_to '#', data: {behavior: 'open-gift-basket'}, onClick: "ga('send', 'event', 'basket', 'open-close', 'open');" do
+              =embedded_svg('icon-circle', class: "icon navbar-static-top__icon-circle")
+              Gift Basket
+              %span.gift-basket-count{"data-behavior" => "gift-basket-count", class: ('empty' if gift_basket_empty?)}
+                = gift_basket_count
 
-      - if current_user
-        %span.top-navigation__menu-item
-          = link_to user_session_path, method: :delete do
-            =embedded_svg('icon-circle', class: "icon navbar-static-top__icon-circle")
-            Sign Out
-      - else
-        %span.top-navigation__menu-item
-          = link_to new_user_session_path, data: {loads_in_pjax_modal: true} do
-            =embedded_svg('icon-circle', class: "icon navbar-static-top__icon-circle")
-            Sign In
+        - if current_user
+          %span.top-navigation__menu-item
+            = link_to user_session_path, method: :delete do
+              =embedded_svg('icon-circle', class: "icon navbar-static-top__icon-circle")
+              Sign Out
+        - else
+          %span.top-navigation__menu-item
+            = link_to new_user_session_path, data: {loads_in_pjax_modal: true} do
+              =embedded_svg('icon-circle', class: "icon navbar-static-top__icon-circle")
+              Sign In
