--- a/app/assets/stylesheets/modules/_grid.scss
+++ b/app/assets/stylesheets/modules/_grid.scss
@@ -41,11 +41,15 @@
  * with disabling the responsiveness.
  */
 
-body,
-.navbar-fixed-top,
-.navbar-fixed-bottom {
-  min-width: 1140px;
-}
+//////////////////////////
+// remove for responsive
+/////////////////////////
+// body,
+// .navbar-fixed-top,
+// .navbar-fixed-bottom {
+//   min-width: 1140px;
+// }
+// ***********************
 
 body.modal-body {
   min-width: auto;
@@ -71,11 +75,15 @@ body.modal-body {
  * grid system, and navbar.
  */
 
+//////////////////////////
+// remove for responsive
+/////////////////////////
 /* Reset the container */
-.container {
-  width: 1140px;
-  max-width: none !important;
-}
+// .container {
+//   width: 1140px;
+//   max-width: none !important;
+// }
+// ***********************
 
 /* Demonstrate the grids */
 // .col-xs-4 {
@@ -87,29 +95,41 @@ body.modal-body {
 //   border: 1px solid rgba(86,61,124,.2);
 // }
 
-.container .navbar-header,
-.container .navbar-collapse {
-  margin-right: 0;
-  margin-left: 0;
-}
+//////////////////////////
+// remove for responsive
+/////////////////////////
+// .container .navbar-header,
+// .container .navbar-collapse {
+//   margin-right: 0;
+//   margin-left: 0;
+// }
+
 
 /* Always float the navbar header */
-.navbar-header {
-  float: left;
-}
+// .navbar-header {
+//   float: left;
+// }
+// ***********************
 
 /* Undo the collapsing navbar */
-.navbar-collapse {
-  display: block !important;
-  height: auto !important;
-  padding-bottom: 0;
-  overflow: visible !important;
-  visibility: visible !important;
-}
-
-.navbar-toggle {
-  display: none;
-}
+//////////////////////////
+// remove for responsive
+/////////////////////////
+// .navbar-collapse {
+//   display: block !important;
+//   height: auto !important;
+//   padding-bottom: 0;
+//   overflow: visible !important;
+//   visibility: visible !important;
+// }
+// ***********************
+//////////////////////////
+// remove for responsive
+/////////////////////////
+// .navbar-toggle {
+//   display: none;
+// }
+// ***********************
 .navbar-collapse {
   border-top: 0;
 }
