--- a/app/assets/stylesheets/modules/_questions.scss
+++ b/app/assets/stylesheets/modules/_questions.scss
@@ -16,6 +16,11 @@
   margin-bottom: 134px;
   position: relative;
   padding: 40px;
+  @media(max-width: $screen-xs-max) {
+    padding: 20px;
+    padding-bottom: 40px;
+    margin-bottom: 80px;
+  }
 }
 
 .sqr-progress {
