--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -48,10 +48,10 @@
               = form.submit 'Submit', class: 'btn btn-primary'
             .clearfix
 
-
-
 - content_for :after_wrapper do
-  = render 'home/after_wrapper'
+  = render 'home/how_wrapt_works'
+  = render 'home/wrapt_stories'
+  -#= render 'home/after_wrapper'
 
 
 - content_for :page_js do
