--- a/app/assets/stylesheets/modules/_landing_pages.scss
+++ b/app/assets/stylesheets/modules/_landing_pages.scss
@@ -164,6 +164,9 @@
 /////////////////////////////////
 // How Wrapt Works
 /////////////////////////////////
+.hpl__container {
+  color: $gray-007;
+}
 .new-quiz__about-intro-content {
   width: 60%;
   margin: 0 auto;
@@ -176,8 +179,20 @@
   }
 }
 
+.home__about-intro {
+  @media (max-width: $screen-xs-max) {
+    max-width: 320px;
+    margin: 0px auto;
+    br {display: none;}
+  }
+}
+
 .home__about-steps {
   margin-top: 40px;
+  border-bottom: solid 1px $gray-005;
+  @media (max-width: $screen-xs-max) {
+    margin-top: 0px;
+  }
 }
 .about-step {
   @media (max-width: $screen-xs-max) {
@@ -196,23 +211,40 @@
   border: solid 1px $blue-001;
   border-radius: 50%;
   font-size: rem(44);
-  height: 90px;
-  width: 90px;
-  line-height: 90px;
+  height: 80px;
+  width: 80px;
+  line-height: 80px;
   margin: 0 auto;
   text-align: center;
+  @media (max-width: $screen-xs-max) {
+    width: 60px;
+    height: 60px;
+    line-height: 60px;
+  }
 }
 
 .about-step__header {
   margin-top: 24px;
-  font-size: rem(25)
+  font-size: rem(18);
+  letter-spacing: 1px;
+  @include akkurat-regular;
+  text-transform: uppercase;
+  white-space: nowrap;
+  @media (max-width: $screen-xs-max) {
+    margin: 8px 0px;
+  }
 }
 
 .about-step__description {
+  margin: 0px auto;
   margin-top: 20px;
-  margin-bottom: 0;
-  font-size: rem(19);
+  font-size: rem(14);
   line-height: 1.4;
+  max-width: 240px;
+  @media (max-width: $screen-xs-max) {
+    font-size: rem(18);
+    margin-top: 0px;
+  }
 }
 
 .new-quiz__after-wrapper {
@@ -323,72 +355,139 @@ body.home,
 // Gift Examples w/ Impact Flyovers
 ///////////////////////////////////
 
-.home__gift-examples {
-  display: flex;
-  width: 100%;
-  margin-top: 60px;
-  @media (max-width: $screen-xs-max) {
-    flex-direction: column;
+.home__gift-examples-container {
+  -webkit-box-shadow: 0px 2px 5px -2px rgba(196, 196, 196, 0.75);
+  -moz-box-shadow: 0px 2px 5px -2px rgba(196, 196, 196, 0.75);
+  box-shadow: 0px 2px 5px -2px rgba(196, 196, 196, 0.75);
+}
+
+.home__gift-examples-carousel {
+  margin-bottom: 40px;
+}
+
+.hgec-carousel__example-image {
+  background-size: cover;
+  background-position: center;
+}
+
+.hgec__title {
+  color: $blue-001;
+  margin-top: 24px;
+}
+
+.hgec__tagline {
+  font-size: rem(18);
+  margin-bottom: 24px;
+}
+
+.hgec__details-labels-container {
+  background-color: $blue-010;
+  .row {
+    margin-bottom: 0px;
+  }
+  p:last-of-type {
+    margin-bottom: 0px;
   }
 }
 
-.home__gift-example {
-  position: relative;
-  overflow: hidden;
-}
-
-.home__gift-example img {
+.hgec__dl-table {
+  table-layout: fixed;
   width: 100%;
 }
 
-
-.home__gift-example .flyover {
-  height: 0;
-  position: absolute;
-  width: 100%;
-  height: 33%;
-  transition: transform 0.25s;
-  overflow: hidden;
+.hgec__details {
+  border-right: 1px solid $gray-005;
+  font-size: rem(12);
+  padding-right: 8px;
 }
 
-.home__gift-example:hover .flyover {
-  display: block;
-  height: 33%;
-  transform: translateY(0);
-  color: white;
+.hgec__label {
+  min-height: 56px;
+  margin-bottom: 8px;
+  text-align: center; 
+  padding-left: 8px;
 }
 
-.home__gift-example .flyover.top {
-  top: 0;
-  transform-origin: top;
-  transform: translateY(-100%);
-  text-align: center;
-  background-color: $gray-012;
-}
-.home__gift-example:hover .flyover.top {
-  transform: translateY(0);
+.hgec__label-icon {
+  width: 30px;
+  height: 30px;
+  margin: 0px auto;
 }
 
-.home__gift-example .flyover.bottom {
-  bottom: 0;
-  transform-origin: bottom;
-  transform: translateY(100%);
-  background-color: rgba(161, 172, 178, 0.8)
-}
-.home__gift-example:hover .flyover.bottom {
-  transform: translateY(0);
-}
-
-.home__flyover-header {
-  position: relative;
-  top: 50%;
+.hgec__label-text {
+  letter-spacing: 1px;
+  color: $blue-001;
   text-transform: uppercase;
-  font-size: rem(58);
+  @include akkurat-regular;
+  font-size: rem(10);
 }
 
-.home__flyover-description {
-  padding: 8.163265306122%;
-  line-height: 1.2;
-  opacity: 1;
-  font-size: rem(20);
-}
+// .home__gift-examples {
+//   display: flex;
+//   width: 100%;
+//   margin-top: 60px;
+//   @media (max-width: $screen-xs-max) {
+//     flex-direction: column;
+//   }
+// }
+
+// .home__gift-example {
+//   position: relative;
+//   overflow: hidden;
+// }
+
+// .home__gift-example img {
+//   width: 100%;
+// }
+
+
+// .home__gift-example .flyover {
+//   height: 0;
+//   position: absolute;
+//   width: 100%;
+//   height: 33%;
+//   transition: transform 0.25s;
+//   overflow: hidden;
+// }
+
+// .home__gift-example:hover .flyover {
+//   display: block;
+//   height: 33%;
+//   transform: translateY(0);
+//   color: white;
+// }
+
+// .home__gift-example .flyover.top {
+//   top: 0;
+//   transform-origin: top;
+//   transform: translateY(-100%);
+//   text-align: center;
+//   background-color: $gray-012;
+// }
+// .home__gift-example:hover .flyover.top {
+//   transform: translateY(0);
+// }
+
+// .home__gift-example .flyover.bottom {
+//   bottom: 0;
+//   transform-origin: bottom;
+//   transform: translateY(100%);
+//   background-color: rgba(161, 172, 178, 0.8)
+// }
+// .home__gift-example:hover .flyover.bottom {
+//   transform: translateY(0);
+// }
+
+// .home__flyover-header {
+//   position: relative;
+//   top: 50%;
+//   text-transform: uppercase;
+//   font-size: rem(58);
+// }
+
+// .home__flyover-description {
+//   padding: 8.163265306122%;
+//   line-height: 1.2;
+//   opacity: 1;
+//   font-size: rem(20);
+// }
