--- a/app/views/gift_recommendations/_gift.haml
+++ b/app/views/gift_recommendations/_gift.haml
@@ -18,7 +18,7 @@
         %ul
           - gift.products.each do |product|
             %li.gift-item= product.description || product.title
-    .gr-carousel__gift-actions.pa2
+    .gr-carousel__gift-actions
       %div
         - gift_selection = GiftSelection.new(gift: gift, profile: @profile)
         = form_for gift_selection, url: profile_gift_selections_path(@profile), html: {data: {remote: true}} do |form|
